--- a/amazon-cloudwatch/cwagent-fluentd-quickstart.yaml
+++ b/amazon-cloudwatch/cwagent-fluentd-quickstart.yaml
@@ -167,7 +167,7 @@ spec:
 apiVersion: v1
 data:
   cluster.name: gitopsworkshop
-  logs.region: <AWS_REGION>
+  logs.region: us-west-2
 kind: ConfigMap
 metadata:
   name: cluster-info
